= 0.7.7 - ?
* bug fix
  * models with non-conventional primary keys could not be updated by gridpanel (davide)

= 0.7.6 - 2012-07-27
* Fix netzke-core version dependency in gemspec

= 0.7.5 - 2012-07-27
* Rails 3.2

* improvements
  * data-related operations in grids and forms are moved to data adapters; implemented (partial) support for DataMapper and Sequel (see updated README)
  * afterApply event in forms and grids (pschyska)
  * apply event fired before apply button is processed in FormPanel (pschyska)

* bug fix
  * advanced search panel works again (pididi)
  * fixed a problem with session and GridPanel

= 0.7.4 - 2012-03-05
* bug fix
  * :enable_pagination is now respected in GridPanel
  * Virtual columns are not sortable by default now
  * Datetime column now works
  * Make Window respect persistence: false
  * Disable persistence for search window in GridPanel

= 0.7.3 - 2011-10-23
* bug fix
  * :sorting_scope is now respected in GridPanel
  * regression: filtering on association column is fix (covered with tests)

= 0.7.2 - 2011-10-20
* bug fix
  * Filter on a date column
  * Using date column caused FormPanel to crash
  * Virtual columns are no longer editable by default

* improvements
  * New DSL method (model) for declaring a model for grids
  * New DSL method (column) for declaring columns for grids
  * New :override_columns config option for grid allows overriding specified column config without influencing other columns' order/presence
  * New DSL method (override_column) to override a specific column config without influencing other columns' order/presence.
  * Grid's title is set to model's pluralized name by default.
  * New :read_only option for FormPanel - makes all fields read-only and removes the "Apply" button.
  * FormPanel implements DSL shortcuts for the following options in default config: :model, :items, :record_id.