@@ -61,9 +61,11 @@
         // Editor for association column
         c.editor = Ext.apply({
           parentId: this.id,
-          name: c.name,
-          selectOnFocus: true // ?
+          column: c,
+          name: c.name
         }, c.editor);
+
+        c.emptyText = c.emptyText || "---";
 
         // Renderer for association column
         this.normalizeAssociationRenderer(c);
@@ -172,7 +174,7 @@
         xtype: 'pagingtoolbar',
         dock: 'bottom',
         store: this.store,
-        items: this.bbar && ["-"].concat(this.bbar) // append the old bbar. TODO: get rid of it.
+        items: this.bbar && ["-"].concat(this.bbar) // append the old bbar
       });
     } else if (this.bbar) {
       this.dockedItems.push({
@@ -223,18 +225,29 @@
     // WIP: GridView
     this.getView().getRowClass = this.defaultGetRowClass;
 
-    // FIXME
-    // When starting editing as assocition column, pre-load the combobox store from the meta column, so that we don't see the real value of this cell (the id of the associated record), but rather the associated record by the configured method.
-    // this.on('beforeedit', function(e){
-    //   console.log("e:", e);
+    // this.on('edit', function(editor, e) {
     //   if (e.column.assoc && e.record.get('_meta')) {
-    //     var data = [e.record.get(e.field), e.record.get('_meta').associationValues[e.field]],
-    //         store = e.column.getEditor().store;
-    //     if (store.getCount() === 0) {
-    //       store.loadData([data]);
-    //     }
+    //     console.log("editor:", editor);
+    //     editor.setRawValue("");
     //   }
-    // }, this);
+    // });
+
+    // When starting editing as assocition column, pre-load the combobox store from the meta column, so that we don't see the real value of this cell (the id of the associated record), but rather the associated record by the configured method.
+    this.on('beforeedit', function(editor, e){
+      if (e.column.assoc && e.record.get('_meta')) {
+        var c = e.column,
+        combo = c.getEditor(),
+        store = combo.store,
+        id = e.record.get(e.field);
+
+        if (id === 0 && -1 == store.find('field1', 0)) store.loadData([[0, c.emptyText]], true);
+
+        if (id && -1 == store.find('field1', id)) {
+          store.loadData([[e.record.get(e.field), e.record.get('_meta').associationValues[e.field]]], true);
+        }
+
+      }
+    }, this);
 
     this.on('afterrender', function() {
       // Persistence-related events (afterrender to avoid blank event firing on render)
@@ -408,14 +421,13 @@
     c.renderer = function(value, a, r, ri, ci){
       var column = this.headerCt.items.getAt(ci),
           editor = column.getEditor && column.getEditor(),
-          // HACK: using private property 'store'
-          recordFromStore = editor && editor.isXType('combobox') && editor.store.findRecord('field1', value),
+          recordFromStore = editor && editor.isXType('combobox') && editor.getStore().findRecord('field1', value),
           renderedValue;
 
       if (recordFromStore) {
         renderedValue = recordFromStore.get('field2');
       } else if (c.assoc && r.get('_meta')) {
-        renderedValue = r.get('_meta').associationValues[c.name] || value;
+        renderedValue = r.get('_meta').associationValues[c.name] || c.emptyText;
       } else {
         renderedValue = value;
       }
